Podstawy pod skrypty NPC

--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,13 @@
             <version>1.0.0</version>
         </dependency>
 
+        <!-- GUI -->
+        <dependency>
+            <groupId>org.fxmisc.richtext</groupId>
+            <artifactId>richtextfx</artifactId>
+            <version>0.7-M5</version>
+        </dependency>
+
         <!-- Logging -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
